<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_average_16"
        android:layout_marginTop="@dimen/spacing_average_16"
        android:gravity="center"
        android:text="@string/share_title"
        android:textColor="@color/colorPrimaryText"
        android:textSize="@dimen/font_normal_16"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/et_comment"
        app:layout_constraintEnd_toStartOf="@id/btn_dismiss"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btn_dismiss"
        android:layout_width="@dimen/share_dismiss_btn_size_24"
        android:layout_height="@dimen/share_dismiss_btn_size_24"
        android:layout_marginEnd="@dimen/spacing_average_16"
        android:background="@android:color/transparent"
        android:src="@drawable/ic_dismiss_24"
        app:layout_constraintBottom_toBottomOf="@id/tv_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_title"
        app:layout_constraintTop_toTopOf="@id/tv_title" />

    <EditText
        android:id="@+id/et_comment"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_average_16"
        android:background="@drawable/rounded_edit_text"
        android:hint="@string/share_edit_text_hint"
        android:paddingStart="@dimen/spacing_normal_12"
        android:paddingTop="@dimen/spacing_small_8"
        android:paddingEnd="@dimen/spacing_normal_12"
        android:paddingBottom="@dimen/spacing_small_8"
        android:textColorHint="@color/colorSecondaryText"
        android:textSize="@dimen/font_normal_16"
        app:layout_constraintBottom_toTopOf="@id/iv_photo"
        app:layout_constraintEnd_toEndOf="@id/btn_dismiss"
        app:layout_constraintStart_toStartOf="@id/tv_title"
        app:layout_constraintTop_toBottomOf="@id/tv_title" />

    <ImageView
        android:id="@+id/iv_photo"
        android:layout_width="0dp"
        android:layout_height="@dimen/share_photo_height_218"
        android:layout_marginTop="@dimen/spacing_normal_12"
        android:layout_marginBottom="@dimen/spacing_large_24"
        android:background="@drawable/rounded_photo"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toTopOf="@id/btn_send"
        app:layout_constraintEnd_toEndOf="@id/et_comment"
        app:layout_constraintStart_toStartOf="@id/et_comment"
        app:layout_constraintTop_toBottomOf="@id/et_comment"
        tools:src="@drawable/photoexample" />

    <Button
        android:id="@+id/btn_send"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_large_24"
        android:layout_marginBottom="@dimen/spacing_large_24"
        android:background="@drawable/rounded_button"
        android:text="@string/share_button_text"
        android:textAllCaps="false"
        android:textColor="@color/colorButtonText"
        android:textSize="@dimen/font_small_15"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/et_comment"
        app:layout_constraintStart_toStartOf="@id/et_comment"
        app:layout_constraintTop_toBottomOf="@id/iv_photo" />

</androidx.constraintlayout.widget.ConstraintLayout>